update eslint dependancies

--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     ]
   },
   "devDependencies": {
-    "eslint": "6.8.x",
-    "eslint-config-airbnb": "18.1.x",
-    "eslint-plugin-import": "2.20.x",
-    "eslint-plugin-jsx-a11y": "6.2.x",
-    "eslint-plugin-react": "7.20.x",
-    "eslint-plugin-react-hooks": "2.5.x",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
     "stylelint-csstree-validator": "^1.8.0",
